# 2026-ectf-osu-design

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bash  clangd-proxy  docker-prep.bash  firmware.cmd  firmware.ld  generate_secrets.py  hsm  init.bash  simple_config_writer.py  simple_crypto.py
.devcontainer/: Dockerfile  devcontainer.json  init.bash
.github/workflows/: build-docs.yaml  linting.yaml
docs/: design.md  index.md  misc.md
docs/design/: design.md
docs/plantuml/: file_transfer.pu  group.pu  interrogate.pu  receive.pu  states.pu
ectf26_design/: pyproject.toml
ectf26_design/src/: gen_secrets.py
firmware/: CMakeLists.txt  Dockerfile  build.bash  build.sh  firmware.cmd  generate_secrets.py  init.bash
firmware/include/: async_uart.h  constants.h  datastructures.h  file.h  group.h  pin_utils.h  random.h  ti_msp_dl_config.h  utils.h
firmware/include/message/: header.h  interrogate.h  list.h  listen.h  read.h  receive.h  write.h
firmware/src/: async_uart.c  file.c  main.c  random.c  secrets.c.j2  utils.c
firmware/src/message/: header.c  interrogate.c  list.c  listen.c  read.c  receive.c  write.c
firmware/sysconfig/: firmware.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
include/: aes.h  async_uart.h  constants.h  file.h  group.h  mpu.h  pin_utils.h  rng.h  secrets.h  secrets.h.base  secrets.h.j2  utils.h
include/message/: header.h  interrogate.h  kex.h  list.h  listen.h  read.h  receive.h  write.h
mbedtls-config/: crypto_config.h
pseudo-sdk/source/ti/devices/msp/: msp.h
pseudo-sdk/source/ti/driverlib/: dl_gpio.h  dl_log.h  dl_trng.h  dl_uart.c  dl_uart.h  dl_uart_main.h  dl_wfi.h  driverlib.h
pseudo-sdk/source/ti/driverlib/m0p/: dl_core.h  dl_sysctl.h
shared_inc/: file.h  group.h  hal.h  impl.h  secrets.h  uart_utils.h
src/: aes.c  async_uart.c  constants.h  file.h  group.h  main.c  mpu.c  pin_utils.c  random.c  rng.c  secrets.c.j2  utils.c
src/impl/: host_messaging.c  host_messaging.h  impl.c  impl_state.h  uart_utils.c  uart_utils.h
src/message/: header.c  interrogate.c  kex.c  list.c  listen.c  read.c  receive.c  write.c
src/mspn/: entropy.c  hal.c  main.c  mspm0l2228.c  mspn.h
src/mspn/sysconfig/: device.lds.genlibs  firmware.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
src/simu/: hal.c  hal_impl.h  main.c  simu_state.h
src/sysconfig/: ti_msp_dl_config.c  ti_msp_dl_config.h
sysconfig/: firmware.syscfg  mspm0l2228.c  ti_msp_dl_config.c  ti_msp_dl_config.h
